--- a/client/src/app/auth/login/login.component.html
+++ b/client/src/app/auth/login/login.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="col-md-6 col-md-offset-3">
         <div class="jumbotron">
-            <form [formGroup]="formGroup" (ngSubmit)="postdata(formGroup)" autocomplete="off" >
+            <form [attr.formGroup]="formGroup" (ngSubmit)="postdata(formGroup)" autocomplete="off" >
                 <div class="form-group">
                     <label for="email">Email</label>
                     <input type="email" name="email" formControlName="email" autocomplete="off" class="form-control input-sm" placeholder="Email Address">
