--- a/client/src/app/auth/user/addUser/createuser.component.html
+++ b/client/src/app/auth/user/addUser/createuser.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="col-md-6 col-md-offset-3">
         <div class="jumbotron">
-            <form [formGroup]="formGroup" (ngSubmit)="postdata(formGroup.value)" autocomplete="off" >
+            <form [attr.formGroup]="formGroup" (ngSubmit)="postdata(formGroup.value)" autocomplete="off" >
                 <div class="form-group">
                     <label for="name">User Name</label>
                     <input type="text" name="name" formControlName="name" autocomplete="off" class="form-control input-sm" placeholder="User Name">
@@ -21,13 +21,11 @@
                     <input type="password" name="Password" formControlName="password"  autocomplete="off" class="form-control input-sm" placeholder="Password">
 
                 </div>
-                <div class="form-group">
-                    <label for="name">Mobile No</label>
-                    <input type="text" name="mobile" formControlName="mobile" autocomplete="off" class="form-control input-sm" placeholder="Mobile No">
-
-                </div>
-                <button type="submit" class="btn btn-primary" [disabled]="!formGroup.valid">Create</button>
-
+                <!-- <button type="submit" class="btn btn-primary" 
+                [disabled]="!formGroup.valid"
+                >Create</button> -->
+                <button type="submit" class="btn btn-primary" 
+                >Create</button>
             </form>
         </div>
     </div>
