--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <div class="row">
       <div class="col-md-12">
         <h2 class="text-center" >Users</h2>
-        <button class="btn btn-success text-right"  (click)="addUser()"> Add User</button>
+        <button class="btn btn-success text-right my-2"  (click)="addUser()"> Add User</button>
         <table class="table table-striped">
           <thead>
           <tr>
@@ -10,7 +10,6 @@
             <!-- <th>ID</th> -->
             <th>Name</th>
             <th>Email</th>
-            <th>Password</th>
             <th>Delete</th>
             <th>Edit</th>
           </tr>
@@ -20,7 +19,6 @@
 
             <!-- <td>{{user.id}}</td> -->
             <td>{{user.name}}</td>
-            <td>{{user.password}}</td>
             <td>{{user.email}}</td>
             <td><button class="btn btn-danger" (click)="deleteuserdetails(user)"> Delete</button></td>
               <td>  <button class="btn btn-success" (click)="updateUser(user)" style="margin-left: 20px;"> Edit</button></td>
