--- a/client/src/app/dashboard/products/products.component.html
+++ b/client/src/app/dashboard/products/products.component.html
@@ -2,31 +2,129 @@
     <div class="row">
       <div class="col-md-12">
         <h2 class="text-center" >Products</h2>
-        <button class="btn btn-success text-right"  (click)="addUser()"> Add User</button>
-        <table class="table table-striped">
+        <button class="btn btn-success text-right my-2"  (click)="addProduct()"> Add Product</button>
+        <!-- <table class="table table-striped">
           <thead>
           <tr>
 
-            <!-- <th>ID</th> -->
             <th>Name</th>
-            <th>Email</th>
-            <th>Password</th>
+            <th>With Children</th>
+            <th>Parent</th>
             <th>Delete</th>
             <th>Edit</th>
           </tr>
           </thead>
           <tbody>
-          <tr *ngFor="let user of users">
+          <tr *ngFor="let product of products">
 
-            <!-- <td>{{user.id}}</td> -->
-            <td>{{user.name}}</td>
-            <td>{{user.password}}</td>
-            <td>{{user.email}}</td>
-            <td><button class="btn btn-danger" (click)="deleteuserdetails(user)"> Delete</button></td>
-              <td>  <button class="btn btn-success" (click)="updateUser(user)" style="margin-left: 20px;"> Edit</button></td>
+            <td>{{product.label}}</td>
+            <td>{{product.route ? "Yes" : "No"}}</td>
+            <td>{{product.label_id}}</td>
+            <td><button class="btn btn-danger" (click)="deleteProduct(product)"> Delete</button></td>
+              <td>  <button class="btn btn-success" (click)="updateProduct(product)" style="margin-left: 20px;"> Edit</button></td>
           </tr>
           </tbody>
-        </table>
-      </div>
-    </div>
+        </table> -->
+		
+  	 <!-- <ul class="treeview">
+        <li *ngFor="let product of products">
+            <input type="checkbox" name="tall" id="tall">
+            <label for="tall" class="custom-unchecked"> {{product.label}}</label>
+            
+            <ul>
+                 <li>
+                     <input type="checkbox" name="tall-1" id="tall-1">
+                     <label for="tall-1" class="custom-unchecked">Buildings</label>
+                 </li>
+                 <li>
+                     <input type="checkbox" name="tall-2" id="tall-2">
+                     <label for="tall-2" class="custom-unchecked">Giants</label>
+                     <ul>
+                         <li>
+                             <input type="checkbox" name="tall-2-1" id="tall-2-1">
+                             <label for="tall-2-1" class="custom-unchecked">Andre</label>
+                         </li>
+                         <li class="last">
+                             <input type="checkbox" name="tall-2-2" id="tall-2-2">
+                             <label for="tall-2-2" class="custom-unchecked">Paul Bunyan</label>
+                         </li>
+                     </ul>
+                 </li>
+                 <li class="last">
+                     <input type="checkbox" name="tall-3" id="tall-3">
+                     <label for="tall-3" class="custom-unchecked">Two sandwiches</label>
+                 </li>
+            </ul>
+        </li>
+        <li>
+            <input type="checkbox" name="short" id="short">
+            <label for="short" class="custom-unchecked">Short Things</label>
+            
+            <ul>
+                 <li>
+                     <input type="checkbox" name="short-1" id="short-1">
+                     <label for="short-1" class="custom-unchecked">Smurfs</label>
+                 </li>
+                 <li>
+                     <input type="checkbox" name="short-2" id="short-2">
+                     <label for="short-2" class="custom-unchecked">Mushrooms</label>
+                 </li>
+                 <li class="last">
+                     <input type="checkbox" name="short-3" id="short-3">
+                     <label for="short-3" class="custom-unchecked">One Sandwich</label>
+                 </li>
+            </ul>
+        </li>
+    </ul> -->
+
+    <nav class="col-md-2 d-none d-md-block">
+      <!-- <div class="sidebar-sticky"> -->
+        <div>
+        <ul class="nav flex-column">
+          <div id="parent">
+            <ng-container  class='mt-4 text-light' *ngFor="let item of products">
+              <div >
+                    <div>
+                      <input class='ml-4' type="checkbox" data-toggle='collapse' data-target='#collapsediv1'/> {{item.label}}
+                    <div id='collapsediv1' class='collapse div1 ml-4'>
+                      <div *ngFor="let cat of categories">
+                        <input class='ml-4' type="checkbox" data-toggle='collapse' data-target='#collapsediv2'/> {{cat.label}}
+                        <div *ngFor="let brand of brands">
+                        <div id='collapsediv2' class='collapse div2 ml-4'>
+                          <div >
+                            <input class='ml-4' type="checkbox" data-toggle='collapse' data-target='#collapsediv7'/> {{brand.label}}
+                          </div>
+                          <div id='collapsediv7' class='collapse div7 ml-4'>
+                            <div>
+                              <input type="checkbox" data-toggle='collapse' /> {{item.label}
+                            </div>
+                            <div>
+                              <input type="checkbox" data-toggle='collapse' /> {{item.label}
+                            </div>
+                            <div>
+                              <input type="checkbox" data-toggle='collapse' /> {{item.label}
+                            </div>
+                            <div>
+                              <input type="checkbox" data-toggle='collapse' /> {{item.label}
+                            </div>
+                            <div>
+                              <input type="checkbox" data-toggle='collapse' /> {{item.label}
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    </div>
+                  </div>
+                  </div>
+                  </ng-container>
+                </div>
+              </ul>
+            </div>
+      <!-- <footer class="footer-dashboard text-center">
+        <small>© {{ year }} JDM CORP.</small>
+      </footer> -->
+    </nav>
   </div>
+</div>
+</div>
