--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -14,7 +14,7 @@
               <button type="button" *ngIf="logoutbtn" class="btn btn-danger btn-block" (click)="logout()">logout</button>
             </li>
             <li class="nav-item">
-              <a class="nav-link" *ngIf="loginbtn" routerLink="registration" routerLinkActive="active">Registration</a>
+              <a class="nav-link" *ngIf="loginbtn" routerLink="create" routerLinkActive="active">Registration</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" *ngIf="logoutbtn" routerLink="dashboard" routerLinkActive="active">Dashboard</a>
