--- a/client/src/app/auth/user/addUser/createuser.component.html
+++ b/client/src/app/auth/user/addUser/createuser.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="col-md-6 col-md-offset-3">
         <div class="jumbotron">
-            <form [attr.formGroup]="formGroup" (ngSubmit)="postdata(formGroup.value)" autocomplete="off" >
+            <form [formGroup]="formGroup" (ngSubmit)="onSubmit()" autocomplete="off" >
                 <div class="form-group">
                     <label for="name">User Name</label>
                     <input type="text" name="name" formControlName="name" autocomplete="off" class="form-control input-sm" placeholder="User Name">
@@ -21,10 +21,10 @@
                     <input type="password" name="Password" formControlName="password"  autocomplete="off" class="form-control input-sm" placeholder="Password">
 
                 </div>
-                <!-- <button type="submit" class="btn btn-primary" 
+                <!-- <button type="submit" class="btn btn-primary"
                 [disabled]="!formGroup.valid"
                 >Create</button> -->
-                <button type="submit" class="btn btn-primary" 
+                <button type="submit" class="btn btn-primary"
                 >Create</button>
             </form>
         </div>
