--- a/client/src/app/auth/user/editUser/edituser.component.html
+++ b/client/src/app/auth/user/editUser/edituser.component.html
@@ -4,25 +4,43 @@
     </div>
     <div class="col-md-6 col-md-offset-3">
         <div class="jumbotron">
-            <form [attr.formGroup]="formGroup" (ngSubmit)="postdata(formGroup.value)" autocomplete="off" >
-                <div class="form-group">
-                    <label for="name">User Name</label>
-                    <input type="text" name="name" formControlName="name" autocomplete="off" class="form-control input-sm" placeholder="User Name">
-                    <input type="hidden" name="name" formControlName="name"  class="form-control input-sm" >
-                </div>
+          <h1 *ngIf="isAddMode">Add User</h1>
+          <h1 *ngIf="!isAddMode">Edit User</h1>
+          <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
+            <div class="form-group">
+              <label for="name">Username</label>
+              <input type="text" name="name" formControlName="name" class="form-control input-sm" placeholder="User Name">
+              <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
+                <div *ngIf="f.name.errors.required">Name is required</div>
+            </div>
+            </div>
 
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" formControlName="email" autocomplete="off" class="form-control input-sm" placeholder="Email Address">
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="email" name="email" formControlName="email" class="form-control input-sm" placeholder="Email Address">
+              <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                <div *ngIf="f.email.errors.required">Email is required</div>
+            </div>
+            </div>
+            <div class="form-group">
+              <label for="Password">Password</label>
+              <em *ngIf="!isAddMode">(Leave blank to keep the same password)</em>
+              <input type="password" formControlName="password" class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+              <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                <div *ngIf="f.password.errors.required">Password is required</div>
+                <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+              </div>
 
-                </div>
-                <div class="form-group">
-                    <label for="Password">Password</label>
-                    <input type="password" name="Password" formControlName="password"  autocomplete="off" class="form-control input-sm" placeholder="Password">
-
-                </div>
-                <button type="submit" class="btn btn-primary" [disabled]="!formGroup.valid">Update</button>
-            </form>
+            </div>
+            <div class="form-group">
+              <button [disabled]="loading" class="btn btn-primary">
+                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                Save
+              </button>
+              <a routerLink="/users" class="btn btn-link">Cancel</a>
+            </div>
+          </form>
         </div>
     </div>
     <div class="col-md-3">
