--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -20,7 +20,7 @@
               <a class="nav-link" *ngIf="logoutbtn" routerLink="dashboard" routerLinkActive="active">Dashboard</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" *ngIf="logoutbtn" routerLink="products" routerLinkActive="active">Products</a>
+              <a class="nav-link" *ngIf="loginbtn" routerLink="product" routerLinkActive="active">Products</a>
             </li>
 
 
