--- a/client/src/app/dashboard/products/products.component.html
+++ b/client/src/app/dashboard/products/products.component.html
@@ -3,7 +3,7 @@
       <div class="col-md-12">
         <h2 class="text-center" >Products</h2>
         <button class="btn btn-success text-right my-2"  (click)="addProduct()"> Add Product</button>
-        <!-- <table class="table table-striped">
+        <table class="table table-striped">
           <thead>
           <tr>
 
@@ -18,67 +18,58 @@
           <tr *ngFor="let product of products">
 
             <td>{{product.label}}</td>
-            <td>{{product.route ? "Yes" : "No"}}</td>
+            <td>{{product.route ==1 ? "Yes" : "No"}}</td>
             <td>{{product.label_id}}</td>
             <td><button class="btn btn-danger" (click)="deleteProduct(product)"> Delete</button></td>
               <td>  <button class="btn btn-success" (click)="updateProduct(product)" style="margin-left: 20px;"> Edit</button></td>
           </tr>
           </tbody>
-        </table> -->
+        </table>
 
-  	 <!-- <ul class="treeview">
-        <li *ngFor="let product of products">
-            <input type="checkbox" name="tall" id="tall">
+  	 <ul class="nav flex-column">
+      <div id="parent">
+        <li *ngFor="let product of products; let i = index">
+            <input #saveProductCheckBox id="saveProductCheckBox" type="checkbox" [checked]="saveProduct"
+            (change)="onProductChanged(saveProductCheckBox.checked)" data-toggle='collapse'
+            data-target='#collapsediv1'>
             <label for="tall" class="custom-unchecked"> {{product.label}}</label>
 
-            <ul>
-                 <li>
-                     <input type="checkbox" name="tall-1" id="tall-1">
-                     <label for="tall-1" class="custom-unchecked">Buildings</label>
-                 </li>
-                 <li>
-                     <input type="checkbox" name="tall-2" id="tall-2">
-                     <label for="tall-2" class="custom-unchecked">Giants</label>
-                     <ul>
-                         <li>
-                             <input type="checkbox" name="tall-2-1" id="tall-2-1">
-                             <label for="tall-2-1" class="custom-unchecked">Andre</label>
-                         </li>
-                         <li class="last">
-                             <input type="checkbox" name="tall-2-2" id="tall-2-2">
-                             <label for="tall-2-2" class="custom-unchecked">Paul Bunyan</label>
-                         </li>
-                     </ul>
-                 </li>
-                 <li class="last">
-                     <input type="checkbox" name="tall-3" id="tall-3">
-                     <label for="tall-3" class="custom-unchecked">Two sandwiches</label>
-                 </li>
-            </ul>
+            <div>
+              <ul>
+                <div *ngIf="product.route" id='collapsediv1' class='collapse div1 ml-4'>
+                   <li *ngFor="let cat of categories">
+                       <input #saveCatCheckBox id="saveCatCheckBox" type="checkbox" [checked]="cat.label[i]"
+                       (change)="onCatChanged(saveCatCheckBox.checked)" data-toggle='collapse' data-target='#collapsediv2'>
+                       <label for="tall-1" > {{cat.label}}</label>
+                    <div>
+                      <div id='collapsediv2' class='collapse div1 ml-4'>
+                        <li *ngFor="let brand of brands; let i = index">
+                          <input type="checkbox" data-toggle='collapse' data-target='#collapsediv3'>
+                          <label for="tall-2" >{{brand.label}}</label>
+                          <div *ngIf=brand.route>
+                            <ul>
+                              <div id='collapsediv3' class='collapse div1 ml-4'>
+                                <li *ngFor="let item of items">
+                                    <input type="checkbox">
+                                    <label for="tall-2-1">{{item.label}}</label>
+                                </li>
+                              </div>
+                            </ul>
+                        </div>
+                      </li>
+                      </div>
+                    </div>
+                  </li>
+                </div>
+              </ul>
+            </div>
         </li>
-        <li>
-            <input type="checkbox" name="short" id="short">
-            <label for="short" class="custom-unchecked">Short Things</label>
 
-            <ul>
-                 <li>
-                     <input type="checkbox" name="short-1" id="short-1">
-                     <label for="short-1" class="custom-unchecked">Smurfs</label>
-                 </li>
-                 <li>
-                     <input type="checkbox" name="short-2" id="short-2">
-                     <label for="short-2" class="custom-unchecked">Mushrooms</label>
-                 </li>
-                 <li class="last">
-                     <input type="checkbox" name="short-3" id="short-3">
-                     <label for="short-3" class="custom-unchecked">One Sandwich</label>
-                 </li>
-            </ul>
-        </li>
-    </ul> -->
+      </div>
+    </ul>
 
-    <nav class="col-md-2 d-none d-md-block">
-      <!-- <div class="sidebar-sticky"> -->
+    <!-- <nav class="col-md-2 d-none d-md-block">
+
         <div>
         <ul class="nav flex-column">
           <div id="parent">
@@ -97,7 +88,7 @@
                           <div *ngFor="let subItems of items">
                             <div id='collapsediv7' class='collapse div7 ml-4'>
                               <div>
-                                <input type="checkbox" data-toggle='collapse' /> {{subItems.label}
+                                <input type="checkbox" data-toggle='collapse' /> {{subItems.label}}
                               </div>
                             </div>
                           </div>
@@ -111,10 +102,8 @@
                 </div>
               </ul>
             </div>
-      <!-- <footer class="footer-dashboard text-center">
-        <small>© {{ year }} JDM CORP.</small>
-      </footer> -->
-    </nav>
+
+    </nav> -->
   </div>
 </div>
 </div>
