with product crud

--- a/client/src/app/dashboard/products/add-editproducts.component.html
+++ b/client/src/app/dashboard/products/add-editproducts.component.html
@@ -1,7 +1,7 @@
-<h1 *ngIf="isAddMode">Add Product</h1>
-<h1 *ngIf="!isAddMode">Edit Product</h1>
+<h1 *ngIf="isAddMode">Edit Product</h1>
+<h1 *ngIf="!isAddMode">Add Product</h1>
 <div class="d-flex align-items-center">
-    <div class="col-md-6 col-md-offset-3">
+    <div class="col-md-6">
       <div class="jumbotron">
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
           <h1>Product </h1>
@@ -9,18 +9,22 @@
             <div class="form-group col-md-6">
               <label for="label">Label</label>
               <input type="text" formControlName="name" class="form-control" />
-
             </div>
             <div class="form-group col-md-6">
-              <label for="exampleSelect1">With Sub Items?</label>
-              <select formControlName="route" class="form-control" id="exampleSelect1">
-                <option ngValue="true">True</option>
-                <option ngValue="false">False</option>
+              <label for="isSub">With Sub Items?</label>
+              <select formControlName="route" class="form-control" id="isSub">
+                <option value="true">True</option>
+                <option value="false">False</option>
                 <!-- <option *ngFor="let s of stateFiscalYearList" [ngValue]="s">{{ s }}</option> -->
               </select>
             </div>
           </div>
-
+          <div class="form-group col-md-6">
+            <label>With Sub Items?</label>
+              <select formControlName="category" class="form-control" id="Selectproduct">
+                <option *ngFor="let item of categories" value="item.label">{{ item.label }}</option>
+              </select>
+          </div>
           <div class="form-group">
             <button [disabled]="loading" class="btn btn-primary">
               <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
@@ -43,17 +47,10 @@
             </div>
             <div class="form-group col-md-6">
               <label>With Sub Items?</label>
-              <select formControlName="category" class="form-control" id="exampleSelect1">
-                <option value="true">True</option>
-                <option value="false">False</option>
-              </select>
-            </div>
-            <div class="form-group col-md-6">
-              <label>Brands</label>
-              <select formControlName="category" class="form-control" id="exampleSelect1">
-                <option >Select Brand</option>
-                <option *ngFor="let brand of brands" value="brand.label">{{ brand.label }}</option>
-              </select>
+                <select formControlName="category" class="form-control" id="Select2">
+                  <option value="true">True</option>
+                  <option value="false">False</option>
+                </select>
             </div>
           </div>
 
@@ -91,13 +88,7 @@
             </select>
           </div>
           <div class="form-group col-md-6">
-            <label>Items</label>
-            <div class="form-group col-md-6">
-              <label for="label">Add new brand</label>
-              <input type="text" formControlName="label" class="form-control" />
-            </div>
-            OR Select Item
-            <select formControlName="category" class="form-control" id="exampleSelect1">
+            <select formControlName="category_id" class="form-control" id="exampleSelect1">
               <option >Select Items</option>
               <option *ngFor="let item of items" value="item.label">{{ item.label }}</option>
             </select>
