--- a/client/src/app/auth/user/addUser/createuser.component.html
+++ b/client/src/app/auth/user/addUser/createuser.component.html
@@ -1,24 +1,24 @@
 <h2 class="text-center">Create User</h2>
-<div class="row">
+<div class="d-flex">
     <div class="col-md-3">
     </div>
     <div class="col-md-6 col-md-offset-3">
         <div class="jumbotron">
-            <form [formGroup]="formGroup" (ngSubmit)="onSubmit()" autocomplete="off" >
+            <form [formGroup]="formGroup" (ngSubmit)="onSubmit()" >
                 <div class="form-group">
                     <label for="name">User Name</label>
-                    <input type="text" name="name" formControlName="name" autocomplete="off" class="form-control input-sm" placeholder="User Name">
+                    <input type="text" name="name" formControlName="name" class="form-control input-sm" placeholder="User Name">
 
                 </div>
 
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" name="email" formControlName="email" autocomplete="off" class="form-control input-sm" placeholder="Email Address">
+                    <input type="email" name="email" formControlName="email" class="form-control input-sm" placeholder="Email Address">
 
                 </div>
                 <div class="form-group">
                     <label for="Password">Password</label>
-                    <input type="password" name="Password" formControlName="password"  autocomplete="off" class="form-control input-sm" placeholder="Password">
+                    <input type="password" name="Password" formControlName="password"  class="form-control input-sm" placeholder="Password">
 
                 </div>
                 <!-- <button type="submit" class="btn btn-primary"
