--- a/client/src/app/dashboard/products/products.component.html
+++ b/client/src/app/dashboard/products/products.component.html
@@ -8,8 +8,8 @@
           <tr>
 
             <th>Name</th>
-            <th>With Children</th>
-            <th>Parent</th>
+            <th>With associated items</th>
+            <th>No of association</th>
             <th>Delete</th>
             <th>Edit</th>
           </tr>
@@ -18,92 +18,48 @@
           <tr *ngFor="let product of products">
 
             <td>{{product.label}}</td>
-            <td>{{product.route ==1 ? "Yes" : "No"}}</td>
-            <td>{{product.label_id}}</td>
+            <td>{{product.route == 1 ? "Yes" : "No"}}</td>
+            <td>{{products.length}}</td>
             <td><button class="btn btn-danger" (click)="deleteProduct(product)"> Delete</button></td>
               <td>  <button class="btn btn-success" (click)="updateProduct(product)" style="margin-left: 20px;"> Edit</button></td>
           </tr>
           </tbody>
         </table>
 
-  	 <ul class="nav flex-column">
-      <div id="parent">
-        <li *ngFor="let product of products; let i = index">
-            <input #saveProductCheckBox id="saveProductCheckBox" type="checkbox" [checked]="saveProduct"
-            (change)="onProductChanged(saveProductCheckBox.checked)" data-toggle='collapse'
-            data-target='#collapsediv1'>
-            <label for="tall" class="custom-unchecked"> {{product.label}}</label>
-
-            <div>
-              <ul>
-                <div *ngIf="product.route" id='collapsediv1' class='collapse div1 ml-4'>
-                   <li *ngFor="let cat of categories">
-                       <input #saveCatCheckBox id="saveCatCheckBox" type="checkbox" [checked]="cat.label[i]"
-                       (change)="onCatChanged(saveCatCheckBox.checked)" data-toggle='collapse' data-target='#collapsediv2'>
-                       <label for="tall-1" > {{cat.label}}</label>
-                    <div>
-                      <div id='collapsediv2' class='collapse div1 ml-4'>
-                        <li *ngFor="let brand of brands; let i = index">
-                          <input type="checkbox" data-toggle='collapse' data-target='#collapsediv3'>
-                          <label for="tall-2" >{{brand.label}}</label>
-                          <div *ngIf=brand.route>
-                            <ul>
-                              <div id='collapsediv3' class='collapse div1 ml-4'>
-                                <li *ngFor="let item of items">
-                                    <input type="checkbox">
-                                    <label for="tall-2-1">{{item.label}}</label>
-                                </li>
-                              </div>
-                            </ul>
-                        </div>
-                      </li>
-                      </div>
-                    </div>
-                  </li>
-                </div>
-              </ul>
-            </div>
-        </li>
-
-      </div>
-    </ul>
-
-    <!-- <nav class="col-md-2 d-none d-md-block">
-
-        <div>
-        <ul class="nav flex-column">
-          <div id="parent">
-            <ng-container  class='mt-4 text-light' *ngFor="let item of products">
-              <div >
-                    <div>
-                      <input class='ml-4' type="checkbox" data-toggle='collapse' data-target='#collapsediv1'/> {{item.label}}
-                    <div id='collapsediv1' class='collapse div1 ml-4'>
+        <ul>
+          <div *ngFor="let product of products; let i = index">
+                <input type="checkbox" data-toggle='collapse'
+                attr.href="{{'#collapsediv' + product.route}}" ><label class="custom-unchecked"> {{product.label}}</label>
+                <div *ngIf="product.route">
+                  <ul class="nav flex-column">
+                    <div attr.id="{{'collapsediv' + product.label_id}}" class='collapse div1 ml-4'>
                       <div *ngFor="let cat of categories">
-                        <input class='ml-4' type="checkbox" data-toggle='collapse' data-target='#collapsediv2'/> {{cat.label}}
-                        <div *ngFor="let brand of brands">
-                        <div id='collapsediv2' class='collapse div2 ml-4'>
-                          <div >
-                            <input class='ml-4' type="checkbox" data-toggle='collapse' data-target='#collapsediv7'/> {{brand.label}}
-                          </div>
-                          <div *ngFor="let subItems of items">
-                            <div id='collapsediv7' class='collapse div7 ml-4'>
-                              <div>
-                                <input type="checkbox" data-toggle='collapse' /> {{subItems.label}}
-                              </div>
+                          <input type="checkbox" data-toggle='collapse' 
+                          attr.href="{{'#collapsediv' + cat.route}}"><label> {{cat.label}}</label>
+                            <div>
+                              <ul *ngIf=cat.route>
+                                <div attr.id="{{'collapsediv' + cat.route}}" class='collapse div1 ml-4'>
+                                  <div *ngFor="let brand of brands">
+                                    <input type="checkbox" data-toggle='collapse' attr.href="{{'#collapsediv' + brand.route}}"><label >{{brand.label}}</label>
+                                    <div>
+                                      <ul>
+                                        <div *ngIf=brand.route class='collapse div1 ml-4' attr.id="{{'collapsediv' + brand.route}}">
+                                          <div *ngFor="let item of items" >
+                                                {{item.label}}
+                                          </div>
+                                        </div>
+                                      </ul>
+                                  </div>
+                                  </div>
+                                </div>
+                            </ul>
                             </div>
-                          </div>
                         </div>
-                      </div>
                     </div>
-                    </div>
-                  </div>
-                  </div>
-                  </ng-container>
-                </div>
-              </ul>
-            </div>
-
-    </nav> -->
+                  </ul>
+              </div>
+          </div>
+      </ul>
   </div>
 </div>
 </div>
