--- a/client/src/app/dashboard/products/add-editproducts.component.html
+++ b/client/src/app/dashboard/products/add-editproducts.component.html
@@ -1,6 +1,6 @@
 <h1 *ngIf="isAddMode">Edit Product</h1>
 <h1 *ngIf="!isAddMode">Add Product</h1>
-<div class="d-flex align-items-center">
+<div class="d-flex justify-content-center">
     <div class="col-md-6">
       <div class="jumbotron">
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
@@ -19,24 +19,24 @@
               </select>
             </div>
           </div>
-          <div class="form-group col-md-6">
+          <!-- <div class="form-group col-md-6">
             <label>With Sub Items?</label>
               <select formControlName="category" class="form-control" id="Selectproduct">
                 <option *ngFor="let item of categories" value="item.label">{{ item.label }}</option>
               </select>
-          </div>
+          </div> -->
           <div class="form-group">
             <button [disabled]="loading" class="btn btn-primary">
               <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
               Save
             </button>
-            <a routerLink="/users" class="btn btn-link">Cancel</a>
+            <a routerLink="/user" class="btn btn-link">Cancel</a>
           </div>
         </form>
       </div>
     </div>
     <!-- category *ngIf="product_has_child"-->
-    <div class="col-md-6 col-md-offset-3">
+    <!-- <div class="col-md-6 col-md-offset-3">
       <div class="jumbotron">
         <form [attr.formGroup]="formCat" (ngSubmit)="onSubmitCat()">
           <h1>Category </h1>
@@ -63,7 +63,7 @@
           </div>
         </form>
       </div>
-    </div>
+    </div> -->
 
 
 
